Ensure mobile images don't overflow.

--- a/css/app.less
+++ b/css/app.less
@@ -8,6 +8,11 @@ p {
   font-size: 18px;
 }
 
+// Ensure that images don't overflow the page on mobile.
+img {
+  max-width: 100%;
+}
+
 h1, h2, h3, h4, h5, h6, .navbar-nav {
   font-family: Georgia, serif;
 }
